Fixed spacing, created font variables and converted fonts to use rems

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,26 +1,27 @@
+@font-face {
+  font-family: "Figtree";
+  src: url("../assets/fonts/Figtree-VariableFont_wght.ttf");
+}
+
 :root {
   --yellow: hsl(47, 88%, 63%);
   --gray-500: hsl(0, 0%, 42%);
   --gray-950: hsl(0, 0%, 7%);
+
+  --figtree-24px-extra-bold: 800 1.5rem/150% "Figtree", serif;
+  --figtree-16px-medium: 500 1rem/150% "Figtree", serif;
+  --figtree-14px-medium: 500 0.875rem/150% "Figtree", serif;
+  --figtree-14px-extra-bold: 800 0.875rem/150% "Figtree", serif;
 }
 
-p {
-  font: 16px;
-  color: var(--gray-500);
+html {
+  font-size: 16px;
 }
 
-a {
-  color: var(--gray-950);
-  text-decoration: none;
-}
-
-a:hover {
-  color: var(--yellow);
-  cursor: pointer;
-}
-
-img {
-  border-radius: 10px;
+@media (width <= 300px) {
+  html {
+    font-size: 14px;
+  }
 }
 
 body {
@@ -28,19 +29,44 @@ body {
   place-items: center;
   height: 100vh;
   background-color: var(--yellow);
-  font-family: calibri, san-serif;
 }
 
-.blog-preview {  
+img {
+  border-radius: 10px;
+}
+
+p {
+  font: var(--figtree-16px-medium);
+  color: var(--gray-500);
+}
+
+h2 a {
+  font: var(--figtree-24px-extra-bold);
+  text-decoration: none;
+  color: var(--gray-950);
+}
+
+h2 a:hover {
+  color: var(--yellow);
+  cursor: pointer;
+}
+
+.blog-preview {
   display: flex;
   flex-direction: column;
-  gap: 10px;
-  max-width: 350px;
-  padding: 16px;
-  background-color: white;  
+  gap: 24px;
+  max-width: 384px;
+  padding: 24px;
+  background-color: white;
   border: 1px solid black;
   border-radius: 20px;
-  box-shadow: 10px 10px 0px -3px rgba(0,0,0,1);
+  box-shadow: 8px 8px 0px rgba(0, 0, 0, 1);
+}
+
+.blog-details {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
 }
 
 .tags-container {
@@ -49,9 +75,9 @@ body {
 }
 
 .tag {
-  padding: 3px 10px;  
-  border-radius: 5px;
-  font-weight: bold;
+  padding: 4px 12px;
+  border-radius: 4px;
+  font: var(--figtree-14px-extra-bold);
 }
 
 .catagory-tag {
@@ -61,10 +87,6 @@ body {
 .tech-tag {
   background-color: var(--gray-950);
   color: white;
-}
-
-.date, .name {
-  color: var(--gray-950);
 }
 
 .author-details {
@@ -77,6 +99,15 @@ body {
   max-width: 30px;
 }
 
+.date {
+  font: var(--figtree-14px-medium);
+}
+
 .name {
-  font-weight: bold;
+  font: var(--figtree-14px-extra-bold);
+}
+
+.date,
+.name {
+  color: var(--gray-950);
 }
